updated media links

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 
 /* Global styles for body */
 body {
-    font-family: 'Helvetica', sans-serif;
+    font-family: 'Verdana', sans-serif;
     background-color: #EDEDED;
     color: #4D4D4D;
     margin: 0;
